# modulo2_nivel1

./: pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
nivel1/: math.py  string.py
tests/: test_math.py  test_string.py
